<resources>
    <string name="variableChangeLogUrl">https://www.walkersguide.org/en/downloads/#apps-change-log</string>
    <string name="variableUserManualUrl">https://www.walkersguide.org/en/user_manual_android/</string>
    <string name="variablePrivacyPolicyUrl">https://www.walkersguide.org/en/privacy/</string>
    <string name="variableDonateUrl">https://www.walkersguide.org/en/donate/</string>
    <string name="walkersGuideServiceNotificationChannelName">WalkersGuide Service</string>
    <string name="walkersGuideServiceNotificationChannelDescription">Is shown in the notification area and on the lock screen as long as WalkersGuide is running.</string>
    <string name="walkersGuideServiceStateForeground">WalkersGuide running</string>
    <string name="walkersGuideServiceStateStopped">WalkersGuide inactive</string>
    <string name="messageNoLocationProviderAvailableShort">Location provider missing</string>
    <string name="messageLocationPermissionDenied">Location permission denied.
        The app won\'t receive any location updates</string>
    <string name="messageLocationPermissionDeniedShort">Location permission denied</string>
    <string name="messagePostNotificationsPermissionDenied">The app won\'t receive any location updates
        because it is not allowed to send you notifications. Many of the WalkersGuide features,
        such as location tracking and recording a route, run in a service. Android requires such a service
        to display a notification if it wants to be executed permanently.
        Therefore, the app asks for this permission.</string>
    <string name="messagePostNotificationsPermissionDeniedShort">Send notifications permission denied.</string>
    <string name="messageLocationProviderDisabledShort">Location service disabled</string>
    <string name="wgRouteRecordingStateOff">Off</string>
    <string name="wgRouteRecordingStatePaused">Paused</string>
    <string name="wgRouteRecordingStateRunning">On</string>
    <string name="messageRouteRecordingPaused">Route recording paused</string>
    <string name="wgTrackingModeOff">Off</string>
    <string name="wgTrackingModeDistance">Distance</string>
    <string name="wgTrackingModeBearing">Viewing direction</string>
    <string name="wgTrackingModeHintOff">Tracking disabled</string>
    <string name="wgTrackingModeHintDistance">Points and routes are announced as you pass close by them.</string>
    <string name="wgTrackingModeHintBearing">Turn around slowly and listen to the points and routes in front of you.</string>
    <string name="toolbarSensorPrefixPosition">Position</string>
    <string name="toolbarSensorPrefixSimulation">Simulation</string>
    <string name="toolbarSensorDataOutdated">outdated</string>
    <string name="toolbarSensorCalibrationRequired">calibrate</string>
    <string name="labelWalkersGuideServiceNotRunningWarning">Attention</string>
    <string name="bearingDetailsDialogTitle">Bearing details</string>
    <string name="switchAutoSwitchBearingSource">Switch bearing sensor automatically</string>
    <string name="switchAutoSwitchBearingSourceHint">When activated, the app gets its bearing information
        from satellite data, for example, when you put your smartphone upright in your pocket.</string>
    <string name="messageAutoSwitchBearingSourceEnabled">You can\'t select a bearing sensor manually, while the automatic switch-sensor option is enabled. Please see below to disable.</string>
    <string name="buttonEnableBearingSimulation">Enable simulation</string>
    <string name="labelForDegreeEditText">Degree:</string>
    <string name="locationDetailsDialogTitle">Location details</string>
    <string name="labelCurrentLocationHeading">Current location</string>
    <string name="buttonActionForCurrentLocation">Actions for the current location</string>
    <string name="currentLocationMenuItemSave">Save location</string>
    <string name="buttonEnableLocationSimulation">Enable simulation</string>
    <string name="locationSensorDetailsDialogTitle">Location sensor details</string>
    <string name="labelGPSCoordinates">Coordinates</string>
    <string name="labelGPSLatitude">Latitude</string>
    <string name="labelGPSLongitude">Longitude</string>
    <string name="labelGPSProvider">Provider</string>
    <string name="labelGPSAccuracy">Accuracy</string>
    <string name="labelGPSMslAltitude">Elevation</string>
    <string name="labelGPSEllipsoidAltitude">Elevation (approx.)</string>
    <string name="labelGPSBearing">Bearing</string>
    <string name="labelGPSSpeed">Speed</string>
    <string name="labelGPSTime">Last fix at</string>
    <string name="whereAmIDialogTitle">Where am I?</string>
    <string name="mainMenuFragmentTitle">Main menu</string>
    <string name="labelMainMenuSectionNewRoute">New route</string>
    <string name="mainMenuItemNavigateToAddress">Navigate to address</string>
    <string name="mainMenuItemNavigateHome">Navigate home</string>
    <string name="mainMenuItemPlanRoute">Plan route</string>
    <string name="mainMenuItemRecordRoute">Record route</string>
    <string name="mainMenuItemOpenGpxFile">Open GPX file</string>
    <string name="labelMainMenuSectionCurrentLocation">Current location</string>
    <string name="mainMenuItemSaveCurrentLocation">Save current location</string>
    <string name="mainMenuItemShareCurrentLocation">Share current location</string>
    <string name="mainMenuItemOpenSharedLocation">Open shared location</string>
    <string name="labelMainMenuSectionMisc">Miscellaneous</string>
    <string name="mainMenuItemCollections">Collections</string>
    <string name="mainMenuItemHistory">History</string>
    <string name="mainMenuItemSettings">Settings</string>
    <string name="mainMenuItemInfo">Info</string>
    <string name="mainMenuItemContactMe">Contact</string>
    <string name="mainMenuItemUserManual">User manual</string>
    <string name="planRouteDialogTitle">Plan route</string>
    <string name="buttonNewRoute">New route</string>
    <string name="buttonSwapStartAndDestination">Swap start and destination</string>
    <string name="spinnerSelectWayClassWeightSettingsPrompt">Select route profile</string>
    <string name="switchShowViaPointList">Show via points</string>
    <string name="selectObjectWithIdFromMultipleSourcesDialogTitleRouteStartPoint">Select start point:</string>
    <string name="selectObjectWithIdFromMultipleSourcesDialogTitleRouteFirstViaPoint">Select first via point:</string>
    <string name="selectObjectWithIdFromMultipleSourcesDialogTitleRouteSecondViaPoint">Select second via point:</string>
    <string name="selectObjectWithIdFromMultipleSourcesDialogTitleRouteThirdViaPoint">Select third via point:</string>
    <string name="selectObjectWithIdFromMultipleSourcesDialogTitleRouteDestinationPoint">Select destination point:</string>
    <string name="selectObjectWithIdFromMultipleSourcesDialogTitleHomeAddress">Select home address:</string>
    <string name="selectObjectWithIdFromMultipleSourcesDialogTitleAddToCollection">Add to collection:</string>
    <string name="menuItemClearPinnedObjects">Reset</string>
    <string name="menuItemClearPinnedObjectsOnlyProfiles">Only profiles</string>
    <string name="menuItemClearPinnedObjectsOnlyPointsAndRoutes">Only points and routes</string>
    <string name="menuItemClearPinnedObjectsBoth">Clear both</string>
    <string name="menuItemClearTrackedObjects">Reset to defaults</string>
    <string name="menuItemClearTrackedObjectsOnlyProfile">Only the profile</string>
    <string name="menuItemClearTrackedObjectsOnlyPointsAndRoutes">Only points and routes</string>
    <string name="menuItemClearTrackedObjectsBoth">Clear both</string>
    <string name="menuItemRecalculate">Recalculate</string>
    <string name="menuItemJumpToNearestPoint">Jump to nearest point</string>
    <string name="menuItemAutoSkipToNextRoutePoint">Autom. skip to next</string>
    <string name="menuItemShowIntersectionLayoutDetails">Show intersection structure</string>
    <string name="menuItemShowPreciseBearingValues">Show precise bearings</string>
    <string name="buttonStartRouteRecording">Start recording</string>
    <string name="buttonPauseRecording">Pause</string>
    <string name="buttonPauseRecordingCD">Pause recording</string>
    <string name="buttonAddPointManually">Add point</string>
    <string name="buttonAddPointManuallyCD">Add current location</string>
    <string name="buttonFinishRecording">Finish</string>
    <string name="buttonFinishRecordingCD">Finish recording</string>
    <string name="menuItemRefresh">Refresh</string>
    <string name="menuItemJumpToTop">Jump to top of list</string>
    <string name="menuItemAutoUpdate">Auto update</string>
    <string name="menuItemFilterResult">Filter by viewing direction</string>
    <string name="labelHomeAddress">Home address</string>
    <string name="labelServerSettingsHeader">WalkersGuide server:</string>
    <string name="buttonServerURLNoSelection">URL: None selected</string>
    <string name="buttonServerMapNoSelection">Map: None selected</string>
    <string name="buttonManageWayClassWeightSettings">Route profiles</string>
    <string name="switchPreferTranslatedStrings">Prefer translations</string>
    <string name="switchPreferTranslatedStringsHint">
            If the map database has multiple languages stored for an entry, this setting ensures that the app outputs
            everything that\'s available in your system language or, as a fallback, in English.
            For instance, the name of restaurants or attractions is occasionally available as an English translation.</string>
    <string name="labelPublicTransportSettingsHeader">Public transport:</string>
    <string name="buttonPublicTransportProviderNoSelection">Provider: None selected</string>
    <string name="labelInterfaceSettingsHeader">User interface:</string>
    <string name="switchShowActionButton">Show action button</string>
    <string name="switchShowActionButtonHint">Alternatively, long-press to open the context menu.</string>
    <string name="switchDisplayRemainsActive">Screen remains active, while the app is in use.</string>
    <string name="switchDisplayRemainsActiveHint">Disables the auto-lock screen feature during navigation.</string>
    <string name="buttonShakeIntensity">Shake intensity</string>
    <string name="buttonShakeIntensityHint">Shake to refresh the "Where am I" dialog and "Points" tab.</string>
    <string name="labelTTSSettingsHeader">Text to speech</string>
    <string name="switchAnnouncementsEnabled">Enable speech announcements</string>
    <string name="labelDistanceAnnouncementInterval">Distance announcement interval</string>
    <string name="labelDistanceAnnouncementIntervalUnit">meters</string>
    <string name="buttonSpeechRate">Speech rate</string>
    <string name="switchSpeakIntersectionStructure">Speak intersection structure</string>
    <string name="switchSpeakIntersectionStructureHint">Appends the structure of an intersection to the navigation instructions for better orientation.\n
        Example: Left: minor road, Straight: main road, Right: minor road.\n
        This setting also applies to the Track tab once you approach a tracked intersection within a few meters.</string>
    <string name="switchKeepBluetoothHeadsetConnectionAlive">Keep Bluetooth headphone connection alive</string>
    <string name="switchKeepBluetoothHeadsetConnectionAliveHint">
        Some Bluetooth headphones enter sleep mode after a period of inactivity, and waking them up causes a noticeable
        delay that may truncate the start
        of voice announcements.</string>
    <string name="labelImportAndExportSettingsHeader">Import and Export:</string>
    <string name="buttonImportSettings">Import application settings</string>
    <string name="buttonExportSettings">Export application settings</string>
    <string name="databaseProfileExcludedFromRouting">Excluded ways from routing</string>
</resources>