<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemRecalculate"
        android:title="@string/menuItemRecalculate" />
    <item
        android:id="@+id/menuItemJumpToNearestPoint"
        android:title="@string/menuItemJumpToNearestPoint" />

    <item
        android:id="@+id/menuItemAutoSkipToNextRoutePoint"
        android:title="@string/menuItemAutoSkipToNextRoutePoint"
        android:checkable="true" />
    <item
        android:id="@+id/menuItemShowPreciseBearingValues"
        android:title="@string/menuItemShowPreciseBearingValues"
        android:checkable="true" />
    <item
        android:id="@+id/menuItemShowIntersectionLayoutDetails"
        android:title="@string/menuItemShowIntersectionLayoutDetails"
        android:checkable="true" />

</menu>
