<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuItemRefresh"
        android:title="@string/menuItemRefresh" />
    <item
        android:id="@+id/menuItemClearPinnedObjects"
        android:title="@string/menuItemClearPinnedObjects" >
        <menu>
            <item
                android:id="@+id/menuItemClearPinnedObjectsOnlyProfiles"
                android:title="@string/menuItemClearPinnedObjectsOnlyProfiles" />
            <item
                android:id="@+id/menuItemClearPinnedObjectsOnlyPointsAndRoutes"
                android:title="@string/menuItemClearPinnedObjectsOnlyPointsAndRoutes" />
            <item
                android:id="@+id/menuItemClearPinnedObjectsBoth"
                android:title="@string/menuItemClearPinnedObjectsBoth" />
        </menu>
    </item>
</menu>
