<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activityMargin"
        android:orientation="vertical">

        <org.walkersguide.android.ui.view.ObjectWithIdView
            android:id="@+id/layoutHomeAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefix="@string/labelHomeAddress"
            app:compact="true" />


        <!-- wg server settings -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:text="@string/labelServerSettingsHeader"
            android:theme="@style/HeadingTextView" />

        <Button
            android:id="@+id/buttonServerURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonServerURLNoSelection" />

        <Button
            android:id="@+id/buttonServerMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonServerMapNoSelection" />

        <Button
            android:id="@+id/buttonManageWayClassWeightSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonManageWayClassWeightSettings" />

        <Button
            android:id="@+id/buttonExcludedWays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/databaseProfileExcludedFromRouting" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchPreferTranslatedStrings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/switchPreferTranslatedStrings" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/switchPreferTranslatedStringsHint" />


        <!-- public transport settings -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:text="@string/labelPublicTransportSettingsHeader"
            android:theme="@style/HeadingTextView" />

        <Button
            android:id="@+id/buttonPublicTransportProvider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonPublicTransportProviderNoSelection" />


        <!-- interface settings -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:text="@string/labelInterfaceSettingsHeader"
            android:theme="@style/HeadingTextView" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchShowActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/switchShowActionButton" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/switchShowActionButtonHint" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDisplayRemainsActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/switchDisplayRemainsActive" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/switchDisplayRemainsActiveHint" />

        <Button
            android:id="@+id/buttonShakeIntensity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/buttonShakeIntensity" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/buttonShakeIntensityHint" />


        <!-- tts settings -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:text="@string/labelTTSSettingsHeader"
            android:theme="@style/HeadingTextView" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAnnouncementsEnabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchAnnouncementsEnabled" />

        <LinearLayout
            android:id="@+id/layoutTtsSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSpeechRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonSpeechRate" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/labelDistanceAnnouncementInterval"
                    android:labelFor="@+id/editDistanceAnnouncementInterval"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:text="@string/labelDistanceAnnouncementInterval"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/layoutDistanceAnnouncementInterval"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/layoutDistanceAnnouncementInterval"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.25"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/labelDistanceAnnouncementInterval"
                    app:layout_constraintTop_toTopOf="parent" >

                    <EditText
                        android:id="@+id/editDistanceAnnouncementInterval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/labelDistanceAnnouncementIntervalUnit"
                        android:inputType="numberDecimal"
                        android:digits="0123456789"
                        android:imeOptions="actionDone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="2dp"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:importantForAccessibility="no"
                        android:text="@string/labelDistanceAnnouncementIntervalUnit" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchSpeakIntersectionStructure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/switchSpeakIntersectionStructure" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/switchSpeakIntersectionStructureHint" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchKeepBluetoothHeadsetConnectionAlive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/switchKeepBluetoothHeadsetConnectionAlive" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/switchKeepBluetoothHeadsetConnectionAliveHint" />
        </LinearLayout>

        <!-- import and export settings -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:text="@string/labelImportAndExportSettingsHeader"
            android:theme="@style/HeadingTextView" />

        <Button
            android:id="@+id/buttonImportSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonImportSettings" />

        <Button
            android:id="@+id/buttonExportSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonExportSettings" />

    </LinearLayout>
</ScrollView>
