<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/labelRecordedRouteStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:textSize="@dimen/bigTextSize" />

    <Button
        android:id="@+id/buttonStartRouteRecording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonStartRouteRecording" />

    <LinearLayout
        android:id="@+id/layoutRouteRecordingInProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/buttonPauseOrResumeRecording"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/buttonPauseRecording"
            android:contentDescription="@string/buttonPauseRecordingCD" />

        <Button
            android:id="@+id/buttonAddPointManually"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/buttonAddPointManually"
            android:contentDescription="@string/buttonAddPointManuallyCD" />

        <Button
            android:id="@+id/buttonFinishRecording"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/buttonFinishRecording"
            android:contentDescription="@string/buttonFinishRecordingCD" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarDividerHeight"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/divider" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerRecordedRouteList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </androidx.fragment.app.FragmentContainerView>

</LinearLayout>
