<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuItemRefresh"
        android:title="@string/menuItemRefresh"
        android:visible="false"
        android:orderInCategory="0" />
    <item
        android:id="@+id/menuItemJumpToTop"
        android:title="@string/menuItemJumpToTop"
        android:visible="false"
        android:orderInCategory="1" />

    <group>
        <item
            android:id="@+id/menuItemAutoUpdate"
            android:title="@string/menuItemAutoUpdate"
            android:checkable="true"
            android:visible="false"
            android:orderInCategory="100" />
        <item
            android:id="@+id/menuItemFilterResult"
            android:title="@string/menuItemFilterResult"
            android:checkable="true"
            android:visible="false"
            android:orderInCategory="101" />
        <item
            android:id="@+id/menuItemAutoUpdateAndFilterResult"
            android:visible="false"
            android:orderInCategory="102" />
    </group>

</menu>
